--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
         <!-- js -->
-        <script type="text/javascript" src="./js/jquery.slim.min.js"></script>
+        <script type="text/javascript" src="./js/jquery.min.js"></script>
         <script type="text/javascript" src="./js/bootstrap.min.js"></script>
         <script type="text/javascript" src="./js/controller.js"></script>
 
@@ -81,11 +81,26 @@
 
     </head>
 <body>
-    <header>
+    <header id="header">
         <span class="subdesc">福岡で今一番人気のプロダクション</span>
 	    <p class="text_logo">celine.</p>
         <div class="humberger menu_btn">
             <span></span><span></span><span></span>
+        </div>
+        <div class="smpMenu">
+            
+            <ul>
+                <li data="header">TOP</li>
+                <li data="#chatlady">CAHT LADYのお仕事について</li>
+                <li data="#workstyle">WORK STYLE</li>
+                <li data="#benefit">BENEFITS</li>
+                <li data="#income">INCOME</li>
+                <li data="#office">OFFICE</li>
+                <li data="#campain">CAMPAIN</li>
+                <li data="#qa">Q&A</li>
+                <li data="#flow">FLOW</li>
+                <li data="#apply">APPLY</li>
+            </ul>
         </div>
     </header>
 
@@ -485,42 +500,55 @@
                 <div class="col-12 col-md-10 offset-md-1">
                     <p class="bk-black"><span>Q.</span>&nbsp;&nbsp;初めてでも大丈夫ですか?</p>
                     <span class="qa_btn"></span>
-                    <p class="bk-gray"><span>A.</span>&nbsp;&nbsp;もちろんです！誰でも最初は未経験です。スタッフがチャットレディの基本を丁寧に教えます、最低時給保障もあるので安心してゆっくりお仕事を覚えて下さい。</p>
+                    <div class="bk-gray">
+                        <p class=""><span>A.</span>&nbsp;&nbsp;もちろんです！誰でも最初は未経験です。スタッフがチャットレディの基本を丁寧に教えます、最低時給保障もあるので安心してゆっくりお仕事を覚えて下さい。</p>
+                    </div>
+                    
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1">
                     <p class="bk-black"><span>Q.</span>&nbsp;&nbsp;男性とはどのような話をするの？</p>
                     <span class="qa_btn"></span>
-                    <p class="bk-gray "><span>A.</span>&nbsp;&nbsp;基本的にはどんな会話でもOKです。世間話し、自分の趣味の話し、ただ笑顔で話しを聞いてくれるだけで癒される男性が沢山います。</p>
+                    <div class="bk-gray">
+                        <p class=""><span>A.</span>&nbsp;&nbsp;基本的にはどんな会話でもOKです。世間話し、自分の趣味の話し、ただ笑顔で話しを聞いてくれるだけで癒される男性が沢山います。</p>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1">
                     <p class="bk-black"><span>Q.</span>&nbsp;&nbsp;容姿に自信がないけど大丈夫ですか？</p>
                     <span class="qa_btn"></span>
-                    <p class="bk-gray"><span>A.</span>&nbsp;&nbsp;年齢や容姿は気にしなくて大丈夫です、色んなタイプの男性がいるので笑顔でいれば貴女の良い所を好きになってくれるお客様が沢山集まってくれます。もし気になる方は弊社スタイリストがメイクの仕方等丁寧にお教えします。</p>
+                    <div class="bk-gray">
+                        <p class=""><span>A.</span>&nbsp;&nbsp;年齢や容姿は気にしなくて大丈夫です、色んなタイプの男性がいるので笑顔でいれば貴女の良い所を好きになってくれるお客様が沢山集まってくれます。もし気になる方は弊社スタイリストがメイクの仕方等丁寧にお教えします。</p>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1">
                     <p class="bk-black"><span>Q.</span>&nbsp;&nbsp;勤務時間はどうやって決めるのですか？</p>
                     <span class="qa_btn"></span>
-                    <p class="bk-gray"><span>A.</span>&nbsp;&nbsp;勤務日、勤務時間は完全フリーなので、24時間365日いつでも好きな時に働くことが出来ます。</p>
+                    <div class="bk-gray">
+                        <p class=""><span>A.</span>&nbsp;&nbsp;勤務日、勤務時間は完全フリーなので、24時間365日いつでも好きな時に働くことが出来ます。</p>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1">
                     <p class="bk-black"><span>Q.</span>&nbsp;&nbsp;ノルマはありますか？</p>
                     <span class="qa_btn"></span>
-                    <p class="bk-gray"><span>A.</span>&nbsp;&nbsp;ノルマは一切ないので安心して下さい。</p>
+                    <div class="bk-gray">
+                        <p class=""><span>A.</span>&nbsp;&nbsp;ノルマは一切ないので安心して下さい。</p>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1">
                     <p class="bk-black"><span>Q.</span>&nbsp;&nbsp;アダルト行為はやらなきゃダメ？</p>
                     <span class="qa_btn"></span>
-                    <p class="bk-gray nm"><span>A.</span>&nbsp;&nbsp;セリーヌチャットは色んなサイトと契約してます、ノンアダルトでお仕事される場合はアダルト行為はNGとなっているのでもしエッチな要求をされても断って大丈夫です。</p>
+                    <div class="bk-gray nm">
+                        <p class=""><span>A.</span>&nbsp;&nbsp;セリーヌチャットは色んなサイトと契約してます、ノンアダルトでお仕事される場合はアダルト行為はNGとなっているのでもしエッチな要求をされても断って大丈夫です。</p>
+                    </div>
                 </div>
             </div>
         </div>
