--- a/index.html
+++ b/index.html
@@ -590,15 +590,15 @@
             <div class="row">
                 <p class="bold center col-12 col-md-10 offset-md-1">応募は、電話・LINE@・メール・フォームより、お好きなご連絡方法でご応募ください。また、ご不安に思うことや質問なども気軽に受け付けております。みなさんが安心して働けるように親身に対応いたします！</p>
             </div>
-            <div class="row">
-                <div class="col-10 offset-1 col-md-4 offset-md-0 btn">
-                    <span>LINEで応募する</span>
+            <div class="row another-apply">
+                <div class="col-10 offset-1 col-md-4 offset-md-0 btn" data="line">
+                    <span class="line">LINEで応募する</span>
                 </div>
-                <div class="col-10 offset-1 col-md-4 offset-md-0 btn">
-                    <span>電話で応募する</span>
+                <div class="col-10 offset-1 col-md-4 offset-md-0 btn" data="phone">
+                    <span class="phone">電話で応募する</span>
                 </div>
-                <div class="col-10 offset-1 col-md-4 offset-md-0 btn">
-                    <span>メールで応募する</span>
+                <div class="col-10 offset-1 col-md-4 offset-md-0 btn" data="mail">
+                    <span class="mail">メールで応募する</span>
                 </div>
             </div>
             <div class="row">
