layout for tab pc

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
             <span></span><span></span><span></span>
         </div>
         <div class="smpMenu">
-            
             <ul>
                 <li data="header">TOP</li>
                 <li data="#chatlady">CAHT LADYのお仕事について</li>
@@ -113,19 +112,21 @@
             <span>LIVE CHAT</span><br /><span>PRODUCTION</span>
         </div>
         <div class="mainDesc">
-            <h2><span class="bdtop"></span><span class="bdtop"></span><span class="bdtop"></span><span class="bdtop"></span>今話題のチャットワークで簡単高収入</h2>
             <div class="container">
+                <div class="row">
+                    <h2 class="col-10 offset-1"><span class="bdtop"></span><span class="bdtop"></span><span class="bdtop"></span><span class="bdtop"></span>今話題のチャットワークで簡単高収入</h2>
+                </div>
                 <ul class="row numbers1">
-                    <li class="col-10 offset-2">
+                    <li class="col-10 offset-2 col-md-5 offset-md-2">
                         週に1回1日4時間おしゃべり
                     </li>
-                    <li class="col-10 offset-2">
+                    <li class="col-10 offset-2 col-md-5 offset-md-0">
                         平均時給 ¥3,200
                     </li>
-                    <li class="col-10 offset-2">
+                    <li class="col-10 offset-2 col-md-5 offset-md-2">
                         お仕事ノルマなし
                     </li>
-                    <li class="col-10 offset-2">
+                    <li class="col-10 offset-2 col-md-5 offset-md-0">
                         短期も大歓迎
                     </li>
                 </ul>
@@ -172,7 +173,7 @@
             <h1><span>福岡の女性の皆様へ</span></h1>
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 col-md-10 offset-md-1">
                         <p class="bk-black center">こんなことを思っていませんか？</p>
                         <ul class="tbl">
                             <li>
@@ -248,7 +249,7 @@
             </div>
             <div class="row">
                 <div class="custome_dott"></div>
-                <div class="dottedbox center col-12 col-md-4">
+                <div class="dottedbox center col-12 col-md-6 offset-md-3">
                     <span class="sml_caption">CASE A</span>
                     <h2>スキマ時間で堅実に稼ぎたい</h2>
                     <h3>週1回1日4時間の勤務で毎月5万円</h3>
@@ -256,7 +257,7 @@
                     <p>月4日勤務で&nbsp;&nbsp;<span class="arrow">&#9650;</span>&nbsp;&nbsp;51,200円GET!</p>
                 </div>
                 <div class="custome_dott"></div>
-                <div class="dottedbox center col-12 col-md-4">
+                <div class="dottedbox center col-12 col-md-6 offset-md-3">
                     <span class="sml_caption">CASE B</span>
                     <h2>副業で休日だけ出勤したい</h2>
                     <h3>週2回1日4時間の勤務で毎月10万円</h3>
@@ -264,7 +265,7 @@
                     <p>月8日勤務で&nbsp;&nbsp;<span class="arrow">&#9650;</span>&nbsp;&nbsp;102,400円GET!</p>
                 </div>
                 <div class="custome_dott"></div>
-                <div class="dottedbox center col-12 col-md-4">
+                <div class="dottedbox center col-12 col-md-6 offset-md-3">
                     <span class="sml_caption">CASE C</span>
                     <h2>しっかり入って大きく稼ぎたい</h2>
                     <h3>週5回1日8時間の勤務で毎月60万円</h3>
@@ -287,48 +288,48 @@
                 <p class="bold center col-12 col-md-10 offset-md-1">不安定な時代だからこそ、安心して働けるようにceline.では最低時給を保障しています。そのほかにも、様々なサポート制度を実施しあなたが安心して働ける環境を用意しています。</p>
             </div>
             <div class="row">
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-5">
                     <div class="bene-img-wrap">
                         <img src="./res/benefit-1.png" alt="celineだけの最低時給保障" />
                         <h2>celineだけの<br />最低時給保障</h2>
                     </div>
                 </div>
-                <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
-                    <p>チャットレディの業界では日によってお客様が少なく、オフィスに来ても待っているだけで時間が過ぎてしまった…ということもあります。この場合、普通は収入が発生しないの発生しないのですが、セリーヌでは<strong>お客様が入らなかったとしても最低時給1200円</strong>と定めていますので、出勤したのに収入が０円ということはありません。セリーヌではあなたの貴重な時間を大切にしたい、という気持ちから他社ではやっていない「最低時給制度」を設けています。仮に、出勤してお客様とお話することがなかったとしても、1時間1200円をお支払いしています。
+                <div class="col-12 col-md-10 offset-md-1 col-lg-7 offset-lg-0">
+                    <p class="msg">チャットレディの業界では日によってお客様が少なく、オフィスに来ても待っているだけで時間が過ぎてしまった…ということもあります。この場合、普通は収入が発生しないの発生しないのですが、セリーヌでは<strong>お客様が入らなかったとしても最低時給1200円</strong>と定めていますので、出勤したのに収入が０円ということはありません。セリーヌではあなたの貴重な時間を大切にしたい、という気持ちから他社ではやっていない「最低時給制度」を設けています。仮に、出勤してお客様とお話することがなかったとしても、1時間1200円をお支払いしています。
                         チャットのお仕事が初めてで稼ぎ方が分からない方でも、時給保証で安心しながらゆっくりお仕事を覚えていけます！</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-5">
                     <div class="bene-img-wrap">
                         <img src="./res/benefit-2.png" alt="お客様との会話をサポート！" />
                         <h2>お客様との会話を<br />サポート！</h2>
                     </div>
                 </div>
-                <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
-                    <p>男性とお話しすることが苦手な方でも、短期間で<strong>聞き上手、話し上手になれるトークマニュアルを用意</strong>しています。このマニュアルさえあれば、お客様に満足してもらえる会話スキルが身に付くこと間違いなし！</p>
+                <div class="col-12 col-md-10 offset-md-1 col-lg-7 offset-lg-0">
+                    <p class="msg">男性とお話しすることが苦手な方でも、短期間で<strong>聞き上手、話し上手になれるトークマニュアルを用意</strong>しています。このマニュアルさえあれば、お客様に満足してもらえる会話スキルが身に付くこと間違いなし！</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-5">
                     <div class="bene-img-wrap">
                         <img src="./res/benefit-3.png" alt="リピート率アップをサポート！" />
                         <h2>リピート率アップを<br />サポート！</h2>
                     </div>
                 </div>
-                <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
-                    <p>チャットレディとして効率的に稼ぐためには、リピート客を増やすことです。でも、お客様に気に入ってもらうことは難しそうですよね。会話の中でちょっとしたテクニックを使えば簡単にリピート客を増やすことができるんです！その秘密をお教えします。</p>
+                <div class="col-12 col-md-10 offset-md-1 col-lg-7 offset-lg-0">
+                    <p class="msg">チャットレディとして効率的に稼ぐためには、リピート客を増やすことです。でも、お客様に気に入ってもらうことは難しそうですよね。会話の中でちょっとしたテクニックを使えば簡単にリピート客を増やすことができるんです！その秘密をお教えします。</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-5">
                     <div class="bene-img-wrap">
                         <img src="./res/benefit-4.png" alt="スタイリストによるヘアメイク" />
                         <h2>スタイリストによる<br />ヘアメイク！</h2>
                     </div>
                 </div>
-                <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
-                    <p>容姿だけが全てではありませんが、新規指名、リピートには見た目も影響しています。<br />そこで弊社では<strong>プロのスタイリストがお仕事前に完璧にメイクを行う</strong>ので、いつも以上に綺麗で可愛い姿でお客様とお話しすることができます。</p>
+                <div class="col-12 col-md-10 offset-md-1 col-lg-7 offset-lg-0">
+                    <p class="msg">容姿だけが全てではありませんが、新規指名、リピートには見た目も影響しています。<br />そこで弊社では<strong>プロのスタイリストがお仕事前に完璧にメイクを行う</strong>ので、いつも以上に綺麗で可愛い姿でお客様とお話しすることができます。</p>
                 </div>
             </div>
         </div>
@@ -341,7 +342,7 @@
                 <p class="bold center col-12 col-md-10 offset-md-1">celine.なら初月から稼げます！50％以上の方が初月から15万円以上の収入を得ているんです。初心者でもすぐに成果が出るから、やりがいのある仕事です！</p>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 col-md-10 offset-md-1">
                     <p class="bk-black center">チャットレディ初月の収入額</p>
                     <div class="d-flex tbl justify-content-around">
                         <img src="./res/income-icon.svg" alt="income chart" />
@@ -377,7 +378,7 @@
                         </div>
                     </div>    
                 </div>
-                <div class="custome_dott"></div>
+                <div class="custome_dott d-md-none"></div>
                 <div class="col-12 col-md-6">
                     <div class="container">
                         <div class="row">
@@ -401,7 +402,7 @@
                         </div>
                     </div>    
                 </div>
-                <div class="custome_dott"></div>
+                <div class="custome_dott d-md-none"></div>
                 <div class="col-12 col-md-6">
                     <div class="container">
                         <div class="row">
@@ -428,7 +429,7 @@
                         </div>
                     </div>    
                 </div>
-                <div class="custome_dott"></div>
+                <div class="custome_dott d-md-none"></div>
                 <div class="col-12 col-md-6">
                     <div class="container">
                         <div class="row">
@@ -453,7 +454,7 @@
                         </div>
                     </div>    
                 </div>
-                <div class="custome_dott"></div>
+                <div class="custome_dott d-md-none"></div>
                 <div class="col-12 col-md-6">
                     <div class="container">
                         <div class="row">
@@ -474,7 +475,7 @@
         <h1 class="main_cap">CAMPAIN</h1>
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-6 offset-md-3 d-flex">
+                <div class="col-12 col-md-8 offset-md-2 d-flex">
                     <img class="" src="./res/campain1.svg" alt="今だけ！限定！応援キャンペーン" />
                     <div class="inner">
                         <h2>入店お祝い金</h2>
@@ -563,19 +564,19 @@
             <div class="row">
             
                     <ul class="numbers1">
-                        <li class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
+                        <li class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-0">
                             <h2>ご応募・お問い合わせ</h2>
                             <p>まずは、ご応募下さい。応募は、LINE@、メール、お電話のいずれかで受け付けています。お好きなご連絡方法でご応募下さい。</p>
                         </li>
-                        <li class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
+                        <li class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-0">
                             <h2>ご連絡・ご面談</h2>
                             <p>お問い合わせいただいた方は担当者よりご希望の時間帯にご連絡致します。その際に疑問などありましたら、お気軽にお尋ね下さい。実際に働きたいと感じた方は、ご面談を行い、ご希望や条件や働き方など決めていきます。</p>
                         </li>
-                        <li class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
+                        <li class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-0">
                             <h2>準備・登録</h2>
                             <p>お給料をお支払いするための登録などを行います。</p>
                         </li>
-                        <li class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
+                        <li class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-0">
                             <h2>仕事開始・サポート</h2>
                             <p>登録や準備等終わったら早速お仕事スタートです、お仕事をスタートして分からない事があったらスタッフにどんどん聞いて下さい。</p>
                         </li>
@@ -602,7 +603,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-10 offset-md-1">
+                <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <div class="form-wrap">
                         <form class="" action="./php/sendmail.php" method="post">
                             <h2>応募フォーム</h2>
