change top-image development

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </header>
 
     <section id="top-image">
-        <img class="top-smp" src="./res/top-smp.jpg" alt="main image" />
+        <img class="top-smp" data="1" src="./res/top-smp.jpg" alt="main image" />
         <img class="top-tab" src="./res/top-tab.jpg" alt="main image" />
         <img class="top-pc" src="./res/top-pc.jpg" alt="main image" />
         <!-- <div class="cap1">
