--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 
     <section id="top-image">
         <img class="d-md-none main" data="1" src="./res/top-smp.jpg" alt="main image" />
-        <img class="d-none d-md-block d-lg-none top-tab main" src="./res/top-tab.jpg" alt="main image" />
-        <img class="d-none d-lg-block d-xl-block top-pc main" src="./res/top-pc.jpg" alt="main image" />
+        <img class="d-none d-md-block d-lg-none main" src="./res/top-tab.jpg" alt="main image" />
+        <img class="d-none d-lg-block d-xl-block main" src="./res/top-pc.jpg" alt="main image" />
 
         <div class="logo">
             <img src="./res/logo.svg" alt="celine. logo" />
@@ -148,28 +148,6 @@
                 <li>専属スタイリスト!</li>
             </ul>
         </div>
-        
-        <!-- <div class="mainDesc">
-            <div class="container">
-                <div class="row">
-                    <h2 class="col-10 offset-1"><span class="bdtop"></span><span class="bdtop"></span><span class="bdtop"></span><span class="bdtop"></span>今話題のチャットワークで簡単高収入</h2>
-                </div>
-                <ul class="row numbers1">
-                    <li class="col-10 offset-2 col-md-5 offset-md-2">
-                        週に1回1日4時間おしゃべり
-                    </li>
-                    <li class="col-10 offset-2 col-md-5 offset-md-0">
-                        平均時給 ¥3,200
-                    </li>
-                    <li class="col-10 offset-2 col-md-5 offset-md-2">
-                        お仕事ノルマなし
-                    </li>
-                    <li class="col-10 offset-2 col-md-5 offset-md-0">
-                        短期も大歓迎
-                    </li>
-                </ul>
-            </div>
-        </div> -->
     </section>
 
     <section id="tokuten">
@@ -251,9 +229,9 @@
             <div class="row">
                 <div class="col-12 col-lg-10 offset-lg-1">
                     <h2>
-                        <img class="top-smp" src="./res/working_chatlady-smp.jpg" alt="チャットレディのお仕事について" />
-                        <img class="top-tab" src="./res/working_chatlady-tab.jpg" alt="チャットレディのお仕事について" />
-                        <img class="top-pc" src="./res/working_chatlady-pc.jpg" alt="チャットレディのお仕事について" />
+                        <img class="d-md-none" src="./res/working_chatlady-smp.jpg" alt="チャットレディのお仕事について" />
+                        <img class="d-none d-md-block d-lg-none" src="./res/working_chatlady-tab.jpg" alt="チャットレディのお仕事について" />
+                        <img class="d-none d-lg-block d-xl-block" src="./res/working_chatlady-pc.jpg" alt="チャットレディのお仕事について" />
                     </h2>
                 </div>
                 <div class="col-12 col-lg-10 offset-lg-1 chatlady_desc_wrap">
