--- a/index.html
+++ b/index.html
@@ -12,15 +12,11 @@
         <title>celine. (セリーヌ) | 福岡で今一番人気のプロダクション</title>
         <meta name="description" content="最低時給1200円を保障！今だけ入店祝い金5万円を支給！はceline.だけ。福岡でチャットレディを始めるなら安心で手厚い保障のceline.がおすすめ！！">
 
-        <!-- favicon setting 
-        <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#f97063">
-        <meta name="msapplication-TileColor" content="#f97063">
-        <meta name="theme-color" content="#ffffff">
-        -->
+        <!-- favicon setting -->
+        <link rel="shortcut icon" href="./res/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="./res/apple-touch-icon.png">
+        <meta name="theme-color" content="#fafafa">
+
         <!-- css -->
         <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -40,8 +36,8 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="celine. (セリーヌ) | 福岡で今一番人気のプロダクション">
         <meta property="og:type" content="website">
-        <!--<meta property="og:image" content="https://chatlady-fukuoka.com/images/image_chat.png">
-        <meta property="og:url" content="https://chatlady-fukuoka.com/kinmu/">-->
+        <!-- <meta property="og:image" content="https://chatlady-fukuoka.com/images/image_chat.png"> -->
+        <!--<meta property="og:url" content="https://chatlady-fukuoka.com/kinmu/">-->
         <meta property="og:description" content="最低時給1200円を保障！今だけ入店祝い金5万円を支給！はceline.だけ。福岡でチャットレディを始めるなら安心で手厚い保障のceline.がおすすめ！！">
         <meta property="og:site_name" content="celine. (セリーヌ) | 福岡で今一番人気のプロダクション">
         <!--<meta property="og:image" content="https://chatlady-fukuoka.com/images/image_chat.png">-->
@@ -56,40 +52,16 @@
             // タブレット端末かどうか
             var sp = (ua.indexOf('iPhone') > 0 || ua.indexOf('Android') > 0 && ua.indexOf('Mobile') > 0)
             var tab = (!sp && (ua.indexOf('iPad') > 0 || ua.indexOf('Android') > 0))
-
-            // タブレット端末でのみ、PC向けデザインの最小幅を、viewportの最小幅に設定
-            // if (tab) new ViewportExtra(1024)
         </script>
-
-        <!-- Webフォント読み込み -->
-        <script>
-        </script>
-
-        <!-- Global site tag (gtag.js) - Google Analytics 
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119620364-2"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'UA-119620364-2');
-        </script>-->
-
-        <!-- Facebook Pixel Code -->
-        
-	    <!-- End Facebook Pixel Code -->
 
     </head>
 <body>
     <header id="header">
-        <!-- <span class="subdesc">福岡で今一番人気のプロダクション</span> -->
-	    <!-- <p class="text_logo">celine.</p> -->
         <div class="smpMenu d-flex">
             <div class="humberger menu_btn">
                 <span></span><span></span>
             </div>
             <div class="menuwrap">
-            <!-- <p id="menu-close-btn">close</p> -->
             <ul>
                 <li data="header">celine.</li>
                 <li data="#chatlady">ABOUT</li>
@@ -681,19 +653,6 @@
         <p class="logo">celine.</p>
 	    <div id="copyright">&copy;2020 celine.</div><!-- copyright -->
     </footer>
-
-
-    <!-- メールフォーム -->
-    <!-- <script src="./js/mailform-js.php"></script> -->
-
-
-    <!-- フリガナ自動入力ライブラリここから -->
-    <!-- <script src="js/jquery.autoKana.js"></script> -->
-    <script>
-	    
-    </script>
-    <!-- フリガナ自動入力ライブラリここまで -->
-
 
 </body>
 </html>
